# finance_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  bot.py  config.yaml  langgraph_structure.md  main.py  pyproject.toml
.agents/rules/: 01.tdd_policy.md  02.ruff_policy.md  03.precommit_policy.md
graph/: llm.py  nodes.py  state.py  workflow.py
test/: test_ai_logic.py  test_ai_logic_integration.py  test_db_tools.py  test_tools.py
tools/: __init__.py  db_queries.py
